# Kawari

./: .build.yml  .gitattributes  .gitignore  CONTRIBUTING.md  Caddyfile  Cargo.toml  Containerfile  README.md  USAGE.md  build.rs  clippy.toml  diesel.toml  run.sh
.github/: code_of_conduct.md  contributing.md  run_artifacts_windows.bat
.github/workflows/: main.yml
core/: Cargo.toml  build.rs
core/macro/: Cargo.toml
core/macro/src/: lib.rs
core/src/: config.rs  lib.rs
core/src/common/: bitmask.rs  customize_data.rs  director.rs  dropin.rs  game.rs  gamedata.rs  mod.rs  object.rs  parsing.rs  position.rs  timeline.rs
core/src/common/workdefinitions/: chara_make.rs  client_select_data.rs  mod.rs
core/src/ipc/: mod.rs
core/src/ipc/chat/: common.rs  mod.rs
core/src/ipc/chat/client/: mod.rs  send_alliance_message.rs  send_cwlinkshell_message.rs  send_party_message.rs  send_tell_message.rs
core/src/ipc/chat/server/: alliance_message.rs  cwlinkshell_message.rs  mod.rs  party_message.rs  tell_message.rs
core/src/ipc/kawari/: mod.rs
core/src/ipc/lobby/: chara_make.rs  mod.rs
core/src/ipc/lobby/client/: mod.rs
core/src/ipc/lobby/server/: dist_retainer_info.rs  mod.rs  nack_reply.rs  service_login_reply.rs
core/src/ipc/zone/: black_list.rs  common.rs  common_emote.rs  common_waymark.rs  mod.rs  online_status.rs  party_misc.rs  search_info.rs  social_list.rs  waymark.rs
core/src/ipc/zone/client/: action_request.rs  client_trigger.rs  dye_information.rs  event_action.rs  event_finish.rs  event_return_handler.rs  event_yield_handler.rs  item_operation.rs  mail.rs  mod.rs  queue_duties.rs  save_glamour_plate.rs  send_chat_message.rs
core/src/ipc/zone/server/: action_result.rs  actor_control.rs  actor_move.rs  actor_set_pos.rs  aoe_effect.rs  apartment_list.rs  chara_info.rs  chat_message.rs  common_spawn.rs  condition.rs  container_info.rs  cross_realm_listing.rs  currency_info.rs  effect_result.rs  enmity_list.rs  equip.rs  event_resume.rs  event_scene.rs  event_start.rs  free_company.rs  glamour.rs  hater_list.rs  house_list.rs  housing_estate_greeting.rs  housing_interior_furniture.rs  housing_occupied_land_info.rs  housing_vacant_land_info.rs  housing_ward.rs  init_zone.rs  item_info.rs  linkshell.rs  mail.rs  map_effects.rs  map_markers.rs  marketboard.rs  mod.rs  mogpendium.rs  npc_spawn.rs  object_spawn.rs  player_setup.rs  (+16 more)
core/src/packet/: compression.rs  encryption.rs  ipc.rs  mod.rs  oodle.rs  parsing.rs  scrambler.rs  send_helpers.rs
doc/: book.toml
doc/src/: SUMMARY.md  acceptable_usage.md  contributing.md  debug_commands.md  generic_events.md  gm_commands.md  sapphire.md  tips.md  usage.md
docs/src/: SUMMARY.md  acceptable_usage.md  community.md  contributing.md  debug_commands.md  ecosystem_work.md  excel.md  extensibility.md  external_connections.md  gm_commands.md  infrastructure.md  opcodes.md  patching.md  profiling.md  scope.md  tips.md  update_ingame_checklist.md
migrations/current2_world/: up.sql
migrations/current_login/: up.sql
paramacro/: Cargo.toml
paramacro/src/: lib.rs
resources/: Caddyfile  opcodes.json
resources/data/: Caddyfile  README.md  constants.yml  festivals.yml  opcodes.json  opcodes.yml
resources/dropins/: README.md  fst_f1_planmap.json  m6d1_planmap.json  s1d1_re_planmap.json  s1f1_planlive.json  w1eb_planmap.json  w1fa_re_planmap.json
resources/scripts/: Global.lua  Init.lua  test.lua
resources/templates/: account.html  account_base.html  admin.html  changepassword.html  launcher.html  launchertweaks.toml  layout.html  login.html  register.html  restore.html  setup.html  web.html  web_base.html  worldstatus.html
resources/timelines/: Default.json  Fossilshell_1039.json  (+4 more)
scripts/: run.sh  run_artifacts_linux.sh
server/admin/: Cargo.toml
server/admin/src/: main.rs
server/frontier/: Cargo.toml
server/frontier/src/: main.rs
server/login/: Cargo.toml
server/login/src/: lib.rs  main.rs
servers/admin/: Cargo.toml
servers/admin/src/: main.rs
servers/lobby/: Cargo.toml
servers/lobby/src/: connection.rs  lib.rs  main.rs
servers/patch/: Cargo.toml
servers/patch/src/: lib.rs  main.rs
servers/web/: Cargo.toml
servers/web/src/: main.rs
servers/world/: Cargo.toml
servers/world/migrations/current_world/: up.sql
servers/world/src/: auracite.rs  bitmask.rs  chara_make.rs  chat_connection.rs  chat_handler.rs  client_select_data.rs  common.rs  custom_ipc_connection.rs  database.rs  dropin.rs  event.rs  gamedata.rs  lib.rs  main.rs  navmesh.rs  scrambler_key_generator.rs  status_effects.rs
servers/world/src/database/: character.rs  database.rs  friends.rs  linkshell.rs  mail.rs  mod.rs  models.rs  schema.rs  social.rs
servers/world/src/events/: crafting.rs  fishing.rs  gathering.rs  gimmick_accessor.rs  inclusion_shop.rs  instance_content.rs  lua.rs  mod.rs  shop.rs  special_shop.rs
servers/world/src/inventory/: buyback.rs  crystals.rs  currency.rs  equipped.rs  generic.rs  glamour.rs  item.rs  iterators.rs  mod.rs  plate.rs  storage.rs
servers/world/src/lua/: effects_builder.rs  inventory.rs  mod.rs  player.rs  state.rs  task.rs  zone.rs
servers/world/src/server/: action.rs  actor.rs  chat.rs  combat_state.rs  director.rs  effect.rs  instance.rs  linkshell.rs  mod.rs  network.rs  npc_behavior.rs  party.rs  social.rs  zone.rs
servers/world/src/server/jobs/: bard.rs  mod.rs  summoner.rs
servers/world/src/zone_connection/: actor.rs  actors.rs  chat.rs  effect.rs  event.rs  friends.rs  item.rs  linkshell.rs  lua.rs  mail.rs  mod.rs  party.rs  quest.rs  shop.rs  social.rs  spawn_allocator.rs  stats.rs  unlock.rs  zone.rs
src/: chara_make.rs  client_select_data.rs  common.rs  compression.rs  config.rs  encryption.rs  ipc.rs  lib.rs  oodle.rs  packet.rs  patchlist.rs
templates/: account.html  admin.html  changepassword.html  launcher.html  login.html  register.html  web.html
tool/navimesh/: Cargo.toml
tools/: extract_obfuscation.py  parse_boss_timeline.py  parse_rawcfcap_packets.py  parse_rotation.py
tools/navimesh/: Cargo.toml
tools/navimesh/src/: main.rs
(+711 files in other folders)
