[workspace]
members = [
    # Core library
    "core",

    # Servers
    "servers/admin",
    "servers/datacentertravel",
    "servers/frontier",
    "servers/launcher",
    "servers/lobby",
    "servers/login",
    "servers/patch",
    "servers/savedatabank",
    "servers/web",
    "servers/world",

    # Tools
    "tools/navimesh",
    "tools/run",
]
resolver = "3"

[workspace.package]
version = "7.41.1"
edition = "2024"

[workspace.lints.clippy]
disallowed-types = "deny" # See clippy.toml
large_enum_variant = "allow" # This is just how we use enums
redundant_locals = "allow" # Too many false positives right now
too_many_arguments = "allow" # Not productive to fix at the moment

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
# Used to read game data
physis = { git = "https://github.com/redstrate/physis", default-features = false }

# Serialization used everywhere
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std", "preserve_order"], default-features = false }
serde-xml-rs = { version = "0.8", default-features = false }
serde_yaml_ng = { version = "0.10", default-features = false }

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"], default-features = false }

# Used for inthe web servers
axum = { version = "0.8", features = ["json", "tokio", "http1", "form", "query", "multipart"], default-features = false }
axum-extra = { version = "0.12", features = ["cookie"], default-features = false }

# Async runtime
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread", "io-util", "process", "net"], default-features = false }

# Used for all kinds of RNG
fastrand = { version = "2.3", features = ["std"], default-features = false }

# HTML templates used in the web servers
minijinja = { version = "2.16", features = ["serde", "loader", "multi_template"], default-features = false }

# For server-side scripting
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "async", "serialize", "userdata-wrappers"], default-features = false }

# For character backup decompression
zip = { version = "8.1", features = ["deflate", "lzma", "bzip2"], default-features = false }

# For inter-server HTTP communication
ureq = { version = "3.2", default-features = false }

# For serving static files on our websites
tower-http = { version = "0.6", features = ["fs", "cors"], default-features = false }

# For obtaining SHA1 hashes of game components
sha1_smol = { version = "1.0", default-features = false }

# For navimesh generation
recastnavigation-sys = { git = "https://github.com/redstrate/recastnavigation-rs-sys", features = ["recast", "detour"], default-features = false }

# Used as our sync primitive (that's also compatible with mlua)
parking_lot = { version = "0.12",  default-features = false }

# For c-style bitflags
bitflags = { version = "2.11", default-features = false }

# Doing cool stuff with enums Rust doesn't have built-in
strum = { version = "0.28", default-features = false }
strum_macros = { version = "0.28", default-features = false }

# Serialization of packets and other data
binrw = { version = "0.15", features = ["std"], default-features = false }

# Reading Excel sheet data
icarus = { git = "https://github.com/redstrate/Icarus", branch = "ver/2025.12.09.0000.0000", features = ["Warp", "Tribe", "ClassJob", "TerritoryType", "Race", "Aetheryte", "EquipSlotCategory", "Action", "WeatherRate", "PlaceName", "GilShopItem", "InstanceContent", "ContentFinderCondition", "BNpcBase", "ModelChara", "Mount", "AetherCurrentCompFlgSet", "WarpLogic", "Item", "AetherCurrentCompFlgSet", "CustomTalk", "Opening", "ItemAction", "PreHandler", "SwitchTalkVariation", "HalloweenNpcSelect", "Quest", "TopicSelect", "ParamGrow", "FateShop", "EObj", "GimmickRect", "SpecialShop", "ClassJobCategory", "BaseParam", "ContentDirectorManagedSG", "FittingShopCategoryItem", "RecastNavimesh", "AetheryteSystemDefine", "GatheringPoint", "GatheringPointBase", "BNpcCustomize", "Recipe", "CraftAction", "GatheringItem"], default-features = false }

# Used in encryption of lobby packets
md5 = { version = "0.8", default-features = false }

# Used for our databases
diesel = { version = "2.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json", "32-column-tables"], default-features = false }

# Used for embedding our database migrations
diesel_migrations = { version = "2.3", default-features = false }

# For sqlite support (we specify * here because diesel selects the version for us)
libsqlite3-sys = { version = "*", features = ["bundled"], default-features = false }

# Used for EventHandlers since stable Rust doesn't have this yet
async-trait = { version = "0.1", default-features = false }
