[package]
name = "kawari"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
# Default featureset.
default = ["server"]

# Oodle compression, not needed unless you are connecting to a retail client.
oodle = []

# Used while compiling with the server binaries.
server = ["dep:tokio", "dep:mlua", "dep:diesel", "dep:libsqlite3-sys"]

[build-dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tracing = { workspace = true }
binrw = { workspace = true }
md5 = { workspace = true }
physis = { workspace = true }
bitflags = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, optional = true }
mlua = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
# Pulled in transitively by diesel's sqlite backend; declaring it activates the `bundled` SQLite so
# tests (and any binary that enables the `server` feature) don't try to link system sqlite3.lib.
libsqlite3-sys = { workspace = true, optional = true }
bstr = { workspace = true }
glam = { workspace = true }

# Used for managing our insane amount of opcodes.
kawari-core-macro = { path = "macro" }
