[package]
name = "kawari-frontier"
edition.workspace = true
version.workspace = true

[dependencies]
kawari = { path = "../../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
