[package]
name = "kawari-login"
edition.workspace = true
version.workspace = true

[dependencies]
kawari = { path = "../../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
fastrand = { workspace = true }
axum-extra = { workspace = true }
minijinja = { workspace = true }
tower-http = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
