[package]
name = "kawari-admin"
edition.workspace = true
version.workspace = true

[dependencies]
kawari = { path = "../../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
minijinja = { workspace = true }
tower-http = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
