[package]
name = "kawari-lobby"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
kawari = { path = "../../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
sha1_smol = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
physis = { workspace = true }
# Pulled in transitively via kawari's `server` feature (diesel). Declaring it here ensures the
# `bundled` SQLite is used when building lobby on its own, so it doesn't try to link system sqlite3.lib.
libsqlite3-sys = { workspace = true }
