[package]
name = "kawari-patch"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
kawari = { path = "../../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
physis = { workspace = true }
