[package]
name = "kawari-navimesh"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
icarus = { workspace = true }
kawari = { path = "../../core" }
physis = { workspace = true }
tracing = { workspace = true }
recastnavigation-sys = { workspace = true }
tracing-subscriber = { workspace = true }
kawari-world = { path = "../../servers/world" }
